--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -27,3 +27,42 @@ jobs:
       run: |
         pwd
         ls
+
+  terraform-plan:
+    name: 'Terraform Plan'
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: 'Terraform Install'
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.9.0"
+
+    - name: Terraform Version
+      run: terraform version
+
+    - name: Terraform Init
+      run: |
+        cd infra/terraform
+        export ARM_CLIENT_ID=${{ secrets.ARM_CLIENT_ID }}
+        export ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET }}
+        export ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}
+        export ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}
+        terraform init \
+        -upgrade \
+        -backend-config="resource_group_name=rg-learntfstate-001" \
+        -backend-config="storage_account_name=stlearntfstate001" \
+        -backend-config="container_name=gh-atn-dev" \
+        -backend-config="key=terraform.tfstate"
+
+    - name: Terraform Plan
+      run: |
+        cd infra/terraform
+        export ARM_CLIENT_ID=${{ secrets.ARM_CLIENT_ID }}
+        export ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET }}
+        export ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}
+        export ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}
+        terraform plan -out=tfplan
