--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -1,12 +1,15 @@
 name: Test Pipeline
-
 on:
+  push:
+    branches:
+      - main
+      
   workflow_dispatch:
     inputs:
       environment:
         type: choice
         description: Environment to deploy
-        options: 
+        options:
         - Dev
         - Test
         - Prod
