--- a/.github/workflows/deploy-bootstrap.yml
+++ b/.github/workflows/deploy-bootstrap.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         type: deployment
         operation: whatIf
-        name: 'ghworkflow${BUILD_NUMBER}'
+        name: ghworkflow${BUILD_NUMBER}
         location: westeurope
         scope: subscription
         subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID_DEV }}
