--- a/.github/workflows/deploy-bootstrap.yml
+++ b/.github/workflows/deploy-bootstrap.yml
@@ -51,4 +51,4 @@ jobs:
           az deployment sub validate \
             --name validate-${{ github.run_id }} \
             --template-file bootstrap_${{ github.event.inputs.environment }}.bicep \
-            --location "westeurope"
+            --location westeurope
