--- a/.github/workflows/deploy-bootstrap.yml
+++ b/.github/workflows/deploy-bootstrap.yml
@@ -1,4 +1,6 @@
 name: Deploy Bootstrap
+run-name: Deployment to ${{ inputs.deploy_target }} by @${{ github.actor }}
+
 on:
   workflow_dispatch:
     inputs:
@@ -13,7 +15,7 @@ on:
 
 jobs:
   bicep:
-    name: 'Bicep Deploy Bootstrap into ${{ github.event.inputs.environment }}'
+    name: 'Bicep Deploy Bootstrap into ${{ github.event.inputs.environment }} environment'
     runs-on: ubuntu-latest
     env:
       BUILD_NUMBER: ${{ github.run_id }}
@@ -22,18 +24,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - uses: azure/login@v2
+    - name: Azure Login
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Azure Subscription
+    - name: Azure Context
       uses: azure/cli@v2
       with:
         azcliversion: latest
         inlineScript: |
           az account show
     
-    - name: Bicep Deloyment
+    - name: Bicep Installation
       uses: azure/cli@v2
       with:
         azcliversion: latest
@@ -43,6 +46,41 @@ jobs:
           az bicep version
 
     - name: Bicep Validate
+      uses: Azure/cli@v1
+      with:
+        azcliversion: latest
+        inlineScript: |
+          cd bootstrap
+          az deployment sub validate \
+            --name validate-${{ github.run_id }} \
+            --template-file bootstrap_${{ github.event.inputs.environment }}.bicep \
+            --location westeurope \
+            --what-if
+    
+    - name: Bicep Plan
+      uses: Azure/cli@v1
+      with:
+        azcliversion: latest
+        inlineScript: |
+          cd bootstrap
+          az deployment sub create \
+            --name validate-${{ github.run_id }} \
+            --template-file bootstrap_${{ github.event.inputs.environment }}.bicep \
+            --location westeurope \
+            --what-if
+    
+    - name: Approval
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.repos.createDeployment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: context.sha,
+            environment: 'approval'
+          }) 
+
+    - name: Bicep Deploy
       uses: Azure/cli@v1
       with:
         azcliversion: latest
