Removed what if from command

--- a/.github/workflows/deploy-bootstrap.yml
+++ b/.github/workflows/deploy-bootstrap.yml
@@ -109,5 +109,4 @@ jobs:
           az deployment sub create \
             --name deploy-${{ github.run_id }} \
             --template-file bootstrap_${{ github.event.inputs.environment }}.bicep \
-            --location westeurope \
-            --what-if
+            --location westeurope
