--- a/.github/workflows/deploy-bootstrap.yml
+++ b/.github/workflows/deploy-bootstrap.yml
@@ -15,6 +15,7 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_id }}
+  SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID_ }}
 
 jobs:
   bicep-plan:
@@ -40,7 +41,7 @@ jobs:
       shell: bash
     - name: Read exported variable
       run: |
-        echo "OUTPUT: ${{ steps.check.test-env.test }}"
+        echo "OUTPUT: ${{ steps.set-variable.test-env.test }}"
 
     - name: Azure Login
       uses: azure/login@v2
