Fixed path in condition

--- a/.github/workflows/deploy-terraform-dev.yml
+++ b/.github/workflows/deploy-terraform-dev.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Run my script
       run: |
-        if [ -d "/infrastructure/dev/${{ github.event.inputs.infrapath }}" ]; then
+        if [ -d "./infrastructure/dev/${{ github.event.inputs.infrapath }}" ]; then
           echo "Path /infrastructure/dev/${{ github.event.inputs.infrapath }} exist"
         else
           echo "!!! Path /infrastructure/dev/${{ github.event.inputs.infrapath }} does not exist !!!"
