--- a/.github/workflows/dev-deploy-terraform.yml
+++ b/.github/workflows/dev-deploy-terraform.yml
@@ -93,11 +93,11 @@ jobs:
         export ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET_DEV }}
         export ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}
         export ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID_DEV }}
-        terraform plan -out=tfplan-${{ github.run_id }}
+        terraform plan -out=tfplan
 
     - name: Save Terraform Plan
       uses: actions/upload-artifact@v4
       with:
-        name: tfplan
+        name: tfplan-${{ github.run_id }}
         path: |
-          infrastructure/dev/${{ github.event.inputs.infrapath }}/tfplan-${{ github.run_id }}
+          infrastructure/dev/${{ github.event.inputs.infrapath }}/tfplan
