--- a/.github/workflows/dev-deploy-terraform.yml
+++ b/.github/workflows/dev-deploy-terraform.yml
@@ -17,6 +17,9 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_id }}
+  # Variable for RG backend
+  # Variable for Storage Account backend
+  # Variable for Container backend
 
 jobs:
   workflow-info:
@@ -49,7 +52,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [workflow-info]
     if: github.event.inputs.infrapath != 'none'
-    environment: dev
 
     steps:
     - name: Checkout repository
@@ -101,3 +103,49 @@ jobs:
         name: tfplan-${{ github.run_id }}
         path: |
           infrastructure/dev/${{ github.event.inputs.infrapath }}/tfplan
+
+  terraform-apply:
+    name: 'Terraform Apply'
+    runs-on: ubuntu-latest
+    needs: [workflow-info, terraform-plan]
+    if: github.event.inputs.infrapath != 'none'
+    environment: dev
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: 'Terraform Install'
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.9.0"
+
+    - name: Terraform Init
+      run: |
+        cd infrastructure/dev/${{ github.event.inputs.infrapath }}
+        export ARM_CLIENT_ID=${{ secrets.ARM_CLIENT_ID_DEV }}
+        export ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET_DEV }}
+        export ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}
+        export ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID_DEV }}
+        terraform init \
+        -upgrade \
+        -backend-config="resource_group_name=rg-rbcz-tfstateaicoe-dev-weu-001" \
+        -backend-config="storage_account_name=statninfradev001" \
+        -backend-config="container_name=infradev001" \
+        -backend-config="key=${{ github.event.inputs.infrapath }}/terraform.tfstate"
+
+    - name: Download Terraform Plan
+      uses: actions/download-artifact@v4
+      with:
+        name: tfplan-${{ github.run_id }}
+        path: |
+          infrastructure/dev/${{ github.event.inputs.infrapath }}/tfplan
+    
+    - name: Terraform Apply
+      run: |
+        cd infrastructure/dev/${{ github.event.inputs.infrapath }}
+        export ARM_CLIENT_ID=${{ secrets.ARM_CLIENT_ID_DEV }}
+        export ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET_DEV }}
+        export ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}
+        export ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID_DEV }}
+        terraform apply -auto-approve tfplan
