Fixed download artifact path

--- a/.github/workflows/dev-deploy-terraform.yml
+++ b/.github/workflows/dev-deploy-terraform.yml
@@ -139,7 +139,7 @@ jobs:
       with:
         name: tfplan-${{ github.run_id }}
         path: |
-          infrastructure/dev/${{ github.event.inputs.infrapath }}/tfplan
+          infrastructure/dev/${{ github.event.inputs.infrapath }}
     
     - name: Terraform Apply
       run: |
